@@ -98,17 +98,26 @@
 			  	<configuration>
 					<source>${maven-compiler-plugin.configuration.source}</source>
 					<target>${maven-compiler-plugin.configuration.source}</target>
+					<compilerArgs>	
+			            --enable-preview	
+			        </compilerArgs>
                 </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 			  	<artifactId>maven-surefire-plugin</artifactId>
 			  	<version>2.22.2</version>
+			  	<configuration>	
+			        <argLine>--enable-preview</argLine>	
+			    </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-failsafe-plugin</artifactId>
 			    <version>2.22.2</version>
+			    <configuration>	
+			        <argLine>--enable-preview</argLine>	
+			    </configuration>
 			</plugin>
 			<plugin>
 		        <!-- Build an executable JAR -->
